<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ViewNote">

    <TextView
        android:id="@+id/noteTitleTxt"
        style="@style/title_text"
        android:text="@string/note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/note_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitleTxt"
        tools:text="@string/note_title"
        style="@style/note_vie_text" />

    <TextView
        android:id="@+id/noteInfoTxt"
        style="@style/title_text"
        android:text="@string/note_info_title"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/note_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteInfoTxt"
        tools:text="@string/note_title"
        style="@style/note_vie_text" />

    <TextView
        android:id="@+id/cratedAtTxt"
        style="@style/title_text"
        android:text="@string/created_on"
        app:layout_constraintTop_toBottomOf="@id/note_info"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cratedAtTimeTxT"
        style="@style/title_text"
        android:text="@string/note_created_time"
        app:layout_constraintTop_toBottomOf="@id/note_info"
        app:layout_constraintStart_toEndOf="@id/cratedAtTxt" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/update_fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/update_note"
        app:icon="@drawable/ic_baseline_create_24"
        app:backgroundTint="@color/fabColor"
        android:contentDescription="@string/floating_button_to_create_new_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>